--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   nice:
     git: git://github.com/AnEnigmaticBug/nice
+  provider: ^3.1.0+1
   sqflite: ^1.1.7+2
 
 dev_dependencies:
