--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_sign_in: ^4.1.1
   nice:
     git: git://github.com/AnEnigmaticBug/nice
   provider: ^3.1.0+1
