--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   nice:
     git: git://github.com/AnEnigmaticBug/nice
   provider: ^3.1.0+1
+  shared_preferences: ^0.5.6
   sqflite: ^1.1.7+2
   url_launcher: ^5.4.1
 
