--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  firebase_analytics: ^5.0.10
+  firebase_core: ^0.4.3+2
+  firebase_crashlytics: ^0.1.2+4
   flutter:
     sdk: flutter
   google_sign_in: ^4.1.1
