--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^0.5.6
   sqflite: ^1.1.7+2
   url_launcher: ^5.4.1
+  qr_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
