--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_analytics: ^5.0.10
   firebase_core: ^0.4.3+2
   firebase_crashlytics: ^0.1.2+4
+  firebase_messaging: ^6.0.9
   flutter:
     sdk: flutter
   google_sign_in: ^4.1.1
